# boolin

./: .gitignore  README.md  pyproject.toml  server.py
flask_app/: __init__.py
flask_app/config/: utils.py
flask_app/controllers/: boolin_c.py  index_c.py
flask_app/models/: boolin_m.py
flask_app/templates/: about.html  base.html  index.html
